# Agentnesis

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
src/: main.py
src/config/: llm_factory.py  settings.py
src/core/: main_graph.py
src/core/states/: __init__.py  global_state.py  reducers.py  schemas.py
src/services/: __init__.py
src/specialists/fractal_agent/: chains.py  schema.py  subgraph.py
src/specialists/fractal_agent/prompts/: critic.txt  executor.txt  planner.txt
src/specialists/genesis/: agent.py  chains.py  schema.py  system_prompt.txt  task_domain_analysis.txt  task_spawn_decision.txt
src/specialists/integrator/: agent.py  chains.py  schema.py  system_prompt.txt  task_validate_proposal.txt
src/specialists/moderator/: agent.py  chains.py  schema.py  system_prompt.txt  task_detect_deadlock.txt  task_turn_decision.txt
src/specialists/synthesizer/: agent.py  chains.py  schema.py  system_prompt.txt  task_base.txt  task_synthesize.txt
src/specialists/synthesizer/formats/: markdown.txt  prose.txt  structured.txt
src/specialists/synthesizer/verbosity/: concise.txt  detailed.txt  normal.txt
src/specialists/universal_worker/: agent.py  chains.py  schema.py  system_prompt.txt  task_execute_work.txt
src/tools/: README.md  __init__.py  registry.py
src/tools/search/: scraper.py  searxng.py  tools.py
src/utils/: README.md  dev_logger.py  helpers.py  llm_invoker.py  llm_wrapper.py  prompt_loader.py  retry.py  url_utils.py
tests/: README.md
